; ModuleID = '/home/carl/AnghaBench/libsodium/src/libsodium/crypto_onetimeauth/poly1305/donna/extr_poly1305_donna.c_crypto_onetimeauth_poly1305_donna_verify.c'
source_filename = "/home/carl/AnghaBench/libsodium/src/libsodium/crypto_onetimeauth/poly1305/donna/extr_poly1305_donna.c_crypto_onetimeauth_poly1305_donna_verify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i64, i8*)* @crypto_onetimeauth_poly1305_donna_verify to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @crypto_onetimeauth_poly1305_donna_verify(i8* %0, i8* %1, i64 %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca [16 x i8], align 16
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = getelementptr inbounds [16 x i8], [16 x i8]* %9, i64 0, i64 0
  %11 = load i8*, i8** %6, align 8
  %12 = load i64, i64* %7, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = call i32 @crypto_onetimeauth_poly1305_donna(i8* %10, i8* %11, i64 %12, i8* %13)
  %15 = load i8*, i8** %5, align 8
  %16 = getelementptr inbounds [16 x i8], [16 x i8]* %9, i64 0, i64 0
  %17 = call i32 @crypto_verify_16(i8* %15, i8* %16)
  ret i32 %17
}

declare dso_local i32 @crypto_onetimeauth_poly1305_donna(i8*, i8*, i64, i8*) #1

declare dso_local i32 @crypto_verify_16(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
